[tool.poetry]
name = "dbt-jornada"
version = "0.1.0"
description = ""
authors = ["Caique Godoy <caiquecgodoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.5"
apache-airflow = "^2.9.1"
apache-airflow-providers-dbt-cloud = "^3.8.1"
apache-airflow-providers-airbyte = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
